fix clouds not showing in IE. Fixes #49

--- a/app/stylesheets/main.scss
+++ b/app/stylesheets/main.scss
@@ -857,7 +857,6 @@ ul.key_skills li {
   position: absolute;
   max-height: 100vh;
   width: auto;
-  z-index: -50;
   right: 0;
   top: 50vh;
   transform: translateY(-50%);
@@ -867,7 +866,6 @@ ul.key_skills li {
   position: absolute;
   max-height: 60vh;
   width: auto;
-  z-index: -50;
   left: -30vh;
   top: -25vh;
 }
@@ -876,7 +874,6 @@ ul.key_skills li {
   position: absolute;
   max-height: 70vh;
   width: auto;
-  z-index: -50;
   right: 0;
   bottom: -10vh;
 }
@@ -885,7 +882,6 @@ ul.key_skills li {
   position: absolute;
   max-height: 100vh;
   width: auto;
-  z-index: -50;
   left: 0;
   top: 50vh;
   transform: translateY(-50%);
@@ -895,7 +891,6 @@ ul.key_skills li {
   position: absolute;
   max-height: 50vh;
   width: auto;
-  z-index: -50;
   right: 5vw;
   bottom: 0;
 }
